--- a/app/src/main/res/layout/layout_home_content.xml
+++ b/app/src/main/res/layout/layout_home_content.xml
@@ -24,6 +24,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/top_view"/>
     <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/text_logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_set"
+        app:layout_constraintBottom_toBottomOf="@id/iv_set"/>
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_choose"
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -83,6 +92,16 @@
         app:layout_constraintLeft_toLeftOf="@id/iv_connect_btn_bg"
         app:layout_constraintRight_toRightOf="@id/iv_connect_btn_bg"
         />
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_guide"
+        android:layout_width="136dp"
+        android:layout_height="270dp"
+        android:src="@drawable/guide"
+        app:layout_constraintTop_toTopOf="@id/iv_connect_btn_bg"
+        app:layout_constraintLeft_toLeftOf="@id/iv_connect_btn_bg"
+        app:layout_constraintRight_toRightOf="@id/iv_connect_btn_bg"
+        app:layout_constraintBottom_toBottomOf="@id/iv_connect_btn_bg"
+        />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -131,12 +150,12 @@
                 android:layout_height="30dp"
                 android:src="@drawable/right"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
-<!--        <include-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="160dp"-->
-<!--            layout="@layout/native_home"-->
-<!--            android:layout_margin="20dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/iv_choose_server"/>-->
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            layout="@layout/native_home"
+            android:layout_margin="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_choose_server"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
